$Id$

BSO:
- adding the 'sign__' type.

STR:
- adding missing 'const' qualifier.

--------
20011119
--------

CLNARG:
- Adding a 's' to the 'Get<Option|Command>Label' function name.
- Adding 'Separator' parameter to 'GetCommandLabels' method.
- Adding 'CLNARG_<DETAIL|GENERAL>_SEPARATOR' defines.
- Adding 'view' enum and modifying functions as needed.

ITG:
- moving it to the 'emth' subproject.

XMLxxx:
- Renamed to 'HOSxxx' and moved to their own project ('ehos').

XMLDBS:
- Adding missing return value.

TOL:
- Fixing cast problem.
- Removing incorrect comment which disturbs quickdoc generation.

TXF:
- Fixing long double printing bug.

--------
20010804
--------

GENERAL:
- moving backed-related libraries ('BKDEND', 'BKDxxx' & also 'FRTEND') to 'ebkd' sub-project.
- moving cgi-related libraries and software ('FRTEND', 'URLARG' and 'getbkdapi') to 'ecgi' sub-project.
- Using the g++ 3.0 due to an ICE by gcc 2.95.3
- Removing the obolete 'BRK*' and 'BROKER' libraries. You may use the libraries from the 'ebkd' sub-project.

BCH:
- Adding the 'Init()' function with parameter.

CPE:
- Adding the 'CPE__[NO_]IOS_EXTENSION'

ERR:
- Introducing 'err' namespace due to conflict with content of a g++ 3.0 header.

FIL:
- Make use of the 'CPE__[NO_]IOS_EXTENSION' to handle the 'ios::nocreate' problem.

FLM:
- Make use of the 'CPE__[NO_]IOS_EXTENSION' to handle the 'ios::nocreate' problem.

STF:
- Make changes required by g++ 3.0.

STR:
- Adding the 'Init()' function with parameter.

TSRCPR:
- Changes required by g++ 3.0.

TTR:
- Changes required by g++ 3.0.

TOL:
- Make use of the 'CPE__[NO_]IOS_EXTENSION' to handle the 'ios::nocreate' problem.

XMLCOR:
- Adding the 'Convert()' function.

XMLDBM:
- Using the 'Convert()' from 'XMLCOR' in 'Filter_()'.

XMLDCM:
- Using the 'Convert()' from 'XMLCOR' in 'Filter_()'.

--------
20010618
--------

AEM:
- Adapting to changes in 'TOL'.

BCH:
- Adapting to changes in 'TOL'.

BCKEND:
- Adapting to changes in 'TOL'.

BITBCH