@@ -1,0 +1,65 @@
+# 'cch' Makefile by Claude L. Simon (csimon@epeios.org)
+# Builds test executable for the 'cch' library.
+# Requires GNU make (http://www.gnu.org/).
+# Copyright (C) 2000,2001 Claude L. SIMON (csimon@epeios.org).
+#
+# This file is part of the Epeios (http://epeios.org/) project.
+# 
+#
+# This program is free software; you can redistribute it and/or
+# modify it under the terms of the GNU General Public License
+# as published by the Free Software Foundation; either version 2
+# of the License, or (at your option) any later version.
+# 
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with this program; if not, go to http://www.fsf.org/
+# or write to the:
+#
+#                       Free Software Foundation, Inc.,
+#          59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
+#
+
+# $Id$
+
+name = cch
+copt =
+# Epeios general debugging features
+copt += -DXXX_DBG
+# Required for multitasking
+#copt += -DCPE_MT
+lopt = 
+libs = ttr tol flw stf err
+
+
+
+ifeq ("$(EPEIOS_OS)","windows")
+# compilation options
+co = -q -c -w-aus -w-inl
+# linkage options
+lo = -q -e$(name)
+endif
+
+ifeq ("$(EPEIOS_OS)","linux")
+co = -c
+# Generates debugging data.
+co += -g
+# General optimization.
+#co += -O
+# To use with gprof
+#co += -pg
+lo = -o $(name)
+# needed when pthread are used.
+#lo += -lpthread
+endif
+
+ifeq ("$(EPEIOS_OS)","beos")
+co = -c -g
+lo = -o $(name)
+endif
+
+include ../xxx/LibMakefile.footer
