@@ -1,0 +1,89 @@
+/*
+  'cch' library by Claude L. Simon (csimon@epeios.org)
+  Requires the 'cch' header file ('cch.h').
+  Copyright (C) 2000,2001 Claude L. SIMON (csimon@epeios.org).
+
+  This file is part of the Epeios (http://epeios.org/) project.
+  
+
+  This library is free software; you can redistribute it and/or
+  modify it under the terms of the GNU General Public License
+  as published by the Free Software Foundation; either version 2
+  of the License, or (at your option) any later version.
+ 
+  This program is distributed in the hope that it will be useful,
+  but WITHOUT ANY WARRANTY; without even the implied warranty of
+  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+  GNU General Public License for more details.
+
+  You should have received a copy of the GNU General Public License
+  along with this program; if not, go to http://www.fsf.org/
+  or write to the:
+  
+                        Free Software Foundation, Inc.,
+           59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
+*/
+
+//	$Id$
+
+#define CCH__COMPILATION
+
+#include "cch.h"
+
+class cchtutor
+: public ttr_tutor
+{
+public:
+	cchtutor( void )
+	: ttr_tutor( CCH_NAME )
+	{
+#ifdef CCH_DBG
+		Version = CCH_VERSION "\b\bD $";
+#else
+		Version = CCH_VERSION;
+#endif
+		Owner = CCH_OWNER;
+		Date = "$Date$";
+	}
+	virtual ~cchtutor( void ){}
+};
+
+/******************************************************************************/
+				  /* do not modify anything above this limit */
+				  /*			  unless specified			 */
+				  /*******************************************/
+/*$BEGIN$*/
+
+using namespace cch;
+
+/* Although in theory this class is inaccessible to the different modules,
+it is necessary to personalize it, or certain compiler would not work properly */
+
+class cchpersonnalization
+: public cchtutor
+{
+public:
+	cchpersonnalization( void )
+	{
+		/* place here the actions concerning this library
+		to be realized at the launching of the application  */
+	}
+	~cchpersonnalization( void )
+	{
+		/* place here the actions concerning this library
+		to be realized at the ending of the application  */
+	}
+};
+
+
+/*$END$*/
+				  /********************************************/
+				  /* do not modify anything belove this limit */
+				  /*			  unless specified		   	  */
+/******************************************************************************/
+
+// 'static' by GNU C++.
+
+static cchpersonnalization Tutor;
+
+ttr_tutor &CCHTutor = Tutor;
