@@ -1,0 +1,83 @@
+/*
+  Header for the 'cch' library by Claude L. Simon (csimon@epeios.org)
+  Copyright (C) 2000,2001 Claude L. SIMON (csimon@epeios.org) 
+
+  This file is part of the Epeios (http://epeios.org/) project.
+  
+
+  This library is free software; you can redistribute it and/or
+  modify it under the terms of the GNU General Public License
+  as published by the Free Software Foundation; either version 2
+  of the License, or (at your option) any later version.
+ 
+  This program is distributed in the hope that it will be useful,
+  but WITHOUT ANY WARRANTY; without even the implied warranty of
+  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+  GNU General Public License for more details.
+
+  You should have received a copy of the GNU General Public License
+  along with this program; if not, go to http://www.fsf.org/
+  or write to the:
+  
+                        Free Software Foundation, Inc.,
+           59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
+*/
+
+//	$Id$
+
+#ifndef CCH__INC
+#define CCH__INC
+
+#define CCH_NAME		"CCH"
+
+#define	CCH_VERSION	"$Revision$"	
+
+#define CCH_OWNER		"the Epeios project (http://epeios.org/)"
+
+#include "ttr.h"
+
+extern class ttr_tutor &CCHTutor;
+
+#if defined( XXX_DBG ) && !defined( CCH_NODBG )
+#define CCH_DBG 
+#endif
+
+/* Begin of automatic documentation generation part. */
+
+//V $Revision$
+//C Claude L. SIMON (csimon@epeios.org)
+//R $Date$
+
+/* End of automatic documentation generation part. */
+
+/******************************************************************************/
+				  /* do not modify anything above this limit */
+				  /*			  unless specified			 */
+				  /*******************************************/
+/*$BEGIN$*/
+
+/* Addendum to the automatic documentation generation part. */
+//D CaCHe
+/* End addendum to automatic documentation generation part. */
+
+
+#include "err.h"
+#include "flw.h"
+#include "bch.h"
+
+namespace cch {
+
+	// The core of a chache.
+	class core_cache___ {
+	private:
+
+
+}
+
+/*$END$*/
+				  /********************************************/
+				  /* do not modify anything belove this limit */
+				  /*			  unless specified		   	  */
+/******************************************************************************/
+
+#endif
